added YouTube video

--- a/storymap.ipynb
+++ b/storymap.ipynb
@@ -2833,7 +2833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2849,9 +2849,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Chapter</th>\n",
+       "      <th>Media Link</th>\n",
+       "      <th>Media Credit</th>\n",
+       "      <th>Media Credit Link</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Zoom</th>\n",
+       "      <th>Marker</th>\n",
+       "      <th>Marker Color</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Overlay</th>\n",
+       "      <th>Overlay Transparency</th>\n",
+       "      <th>GeoJSON Overlay</th>\n",
+       "      <th>GeoJSON Feature Properties</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Overview of Raleigh</td>\n",
+       "      <td>media/visit_raleigh.jpg</td>\n",
+       "      <td>Source: Raleigh Government</td>\n",
+       "      <td>https://raleighnc.gov/</td>\n",
+       "      <td>Before European colonization, the Raleigh area...</td>\n",
+       "      <td>15.75</td>\n",
+       "      <td>Hidden</td>\n",
+       "      <td></td>\n",
+       "      <td>Raleigh, NC</td>\n",
+       "      <td>35.779600</td>\n",
+       "      <td>-78.638200</td>\n",
+       "      <td>https://mapwarper.net/maps/tile/51816/{z}/{x}/...</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Peace College</td>\n",
+       "      <td>media/peace.jpg</td>\n",
+       "      <td>Image Source: Niche</td>\n",
+       "      <td>https://www.niche.com/colleges/william-peace-u...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>Plain</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>15 E PEACE ST</td>\n",
+       "      <td>35.788240</td>\n",
+       "      <td>-78.637376</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Shaw University</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>Plain</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>118 E SOUTH ST</td>\n",
+       "      <td>35.771817</td>\n",
+       "      <td>-78.637986</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Saint Augustines College</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>Plain</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>1315 OAKWOOD AVENUE</td>\n",
+       "      <td>35.784495</td>\n",
+       "      <td>-78.620682</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>North Carolina State University At Raleigh</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>Plain</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>2200 HILLSBOROUGH STREET</td>\n",
+       "      <td>35.786472</td>\n",
+       "      <td>-78.664483</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      Chapter               Media Link  \\\n",
+       "0                         Overview of Raleigh  media/visit_raleigh.jpg   \n",
+       "1                               Peace College          media/peace.jpg   \n",
+       "2                             Shaw University                      NaN   \n",
+       "3                    Saint Augustines College                      NaN   \n",
+       "4  North Carolina State University At Raleigh                      NaN   \n",
+       "\n",
+       "                 Media Credit  \\\n",
+       "0  Source: Raleigh Government   \n",
+       "1         Image Source: Niche   \n",
+       "2                         NaN   \n",
+       "3                         NaN   \n",
+       "4                         NaN   \n",
+       "\n",
+       "                                   Media Credit Link  \\\n",
+       "0                             https://raleighnc.gov/   \n",
+       "1  https://www.niche.com/colleges/william-peace-u...   \n",
+       "2                                                NaN   \n",
+       "3                                                NaN   \n",
+       "4                                                NaN   \n",
+       "\n",
+       "                                         Description   Zoom  Marker  \\\n",
+       "0  Before European colonization, the Raleigh area...  15.75  Hidden   \n",
+       "1                                                NaN  16.00   Plain   \n",
+       "2                                                NaN  16.00   Plain   \n",
+       "3                                                NaN  16.00   Plain   \n",
+       "4                                                NaN  16.00   Plain   \n",
+       "\n",
+       "  Marker Color                  Location   Latitude  Longitude  \\\n",
+       "0                            Raleigh, NC  35.779600 -78.638200   \n",
+       "1         blue             15 E PEACE ST  35.788240 -78.637376   \n",
+       "2         blue            118 E SOUTH ST  35.771817 -78.637986   \n",
+       "3         blue       1315 OAKWOOD AVENUE  35.784495 -78.620682   \n",
+       "4         blue  2200 HILLSBOROUGH STREET  35.786472 -78.664483   \n",
+       "\n",
+       "                                             Overlay  Overlay Transparency  \\\n",
+       "0  https://mapwarper.net/maps/tile/51816/{z}/{x}/...                   0.9   \n",
+       "1                                                NaN                   NaN   \n",
+       "2                                                NaN                   NaN   \n",
+       "3                                                NaN                   NaN   \n",
+       "4                                                NaN                   NaN   \n",
+       "\n",
+       "   GeoJSON Overlay  GeoJSON Feature Properties  \n",
+       "0              NaN                         NaN  \n",
+       "1              NaN                         NaN  \n",
+       "2              NaN                         NaN  \n",
+       "3              NaN                         NaN  \n",
+       "4              NaN                         NaN  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check our work\n",
     "chapter_df.head()"
@@ -2859,12 +3048,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Chapter</th>\n",
+       "      <th>Media Link</th>\n",
+       "      <th>Media Credit</th>\n",
+       "      <th>Media Credit Link</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Zoom</th>\n",
+       "      <th>Marker</th>\n",
+       "      <th>Marker Color</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Overlay</th>\n",
+       "      <th>Overlay Transparency</th>\n",
+       "      <th>GeoJSON Overlay</th>\n",
+       "      <th>GeoJSON Feature Properties</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Overview of Raleigh</td>\n",
+       "      <td>media/visit_raleigh.jpg</td>\n",
+       "      <td>Source: Raleigh Government</td>\n",
+       "      <td>https://raleighnc.gov/</td>\n",
+       "      <td>Before European colonization, the Raleigh area...</td>\n",
+       "      <td>15.75</td>\n",
+       "      <td>Hidden</td>\n",
+       "      <td></td>\n",
+       "      <td>Raleigh, NC</td>\n",
+       "      <td>35.779600</td>\n",
+       "      <td>-78.638200</td>\n",
+       "      <td>https://mapwarper.net/maps/tile/51816/{z}/{x}/...</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Peace College</td>\n",
+       "      <td>media/peace.jpg</td>\n",
+       "      <td>Image Source: Niche</td>\n",
+       "      <td>https://www.niche.com/colleges/william-peace-u...</td>\n",
+       "      <td>William Peace University was founded in 1857. ...</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>Plain</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>15 E PEACE ST</td>\n",
+       "      <td>35.788240</td>\n",
+       "      <td>-78.637376</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Shaw University</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>Plain</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>118 E SOUTH ST</td>\n",
+       "      <td>35.771817</td>\n",
+       "      <td>-78.637986</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Saint Augustines College</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>Plain</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>1315 OAKWOOD AVENUE</td>\n",
+       "      <td>35.784495</td>\n",
+       "      <td>-78.620682</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>North Carolina State University At Raleigh</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>Plain</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>2200 HILLSBOROUGH STREET</td>\n",
+       "      <td>35.786472</td>\n",
+       "      <td>-78.664483</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      Chapter               Media Link  \\\n",
+       "0                         Overview of Raleigh  media/visit_raleigh.jpg   \n",
+       "1                               Peace College          media/peace.jpg   \n",
+       "2                             Shaw University                      NaN   \n",
+       "3                    Saint Augustines College                      NaN   \n",
+       "4  North Carolina State University At Raleigh                      NaN   \n",
+       "\n",
+       "                 Media Credit  \\\n",
+       "0  Source: Raleigh Government   \n",
+       "1         Image Source: Niche   \n",
+       "2                         NaN   \n",
+       "3                         NaN   \n",
+       "4                         NaN   \n",
+       "\n",
+       "                                   Media Credit Link  \\\n",
+       "0                             https://raleighnc.gov/   \n",
+       "1  https://www.niche.com/colleges/william-peace-u...   \n",
+       "2                                                NaN   \n",
+       "3                                                NaN   \n",
+       "4                                                NaN   \n",
+       "\n",
+       "                                         Description   Zoom  Marker  \\\n",
+       "0  Before European colonization, the Raleigh area...  15.75  Hidden   \n",
+       "1  William Peace University was founded in 1857. ...  16.00   Plain   \n",
+       "2                                                NaN  16.00   Plain   \n",
+       "3                                                NaN  16.00   Plain   \n",
+       "4                                                NaN  16.00   Plain   \n",
+       "\n",
+       "  Marker Color                  Location   Latitude  Longitude  \\\n",
+       "0                            Raleigh, NC  35.779600 -78.638200   \n",
+       "1         blue             15 E PEACE ST  35.788240 -78.637376   \n",
+       "2         blue            118 E SOUTH ST  35.771817 -78.637986   \n",
+       "3         blue       1315 OAKWOOD AVENUE  35.784495 -78.620682   \n",
+       "4         blue  2200 HILLSBOROUGH STREET  35.786472 -78.664483   \n",
+       "\n",
+       "                                             Overlay  Overlay Transparency  \\\n",
+       "0  https://mapwarper.net/maps/tile/51816/{z}/{x}/...                   0.9   \n",
+       "1                                                NaN                   NaN   \n",
+       "2                                                NaN                   NaN   \n",
+       "3                                                NaN                   NaN   \n",
+       "4                                                NaN                   NaN   \n",
+       "\n",
+       "   GeoJSON Overlay  GeoJSON Feature Properties  \n",
+       "0              NaN                         NaN  \n",
+       "1              NaN                         NaN  \n",
+       "2              NaN                         NaN  \n",
+       "3              NaN                         NaN  \n",
+       "4              NaN                         NaN  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Add to the Description of Peace College including when it was founded and an interesting fact about it\n",
-    "\n"
+    "\n",
+    "chapter_df.loc[1, \"Description\"] = \"William Peace University was founded in 1857. It's motto is \\\n",
+    "    <em>Esse quam videri</em> - \\\"To be, rather than to seem\\\".\"\n",
+    "\n",
+    "chapter_df.head()"
    ]
   },
   {
@@ -2882,14 +3264,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add our copied embed youtube link to the \"Media Link\" column for NC State\n",
+    "chapter_df.loc[4, \"Media Link\"] = \"https://www.youtube.com/embed/aZQFQnbs_Ho\"\n",
     "\n",
-    "\n",
-    "# Save to Chapters.csv \n"
+    "# Save to Chapters.csv \n",
+    "chapter_df.to_csv('./csv/Chapters.csv')"
    ]
   },
   {
