added NCSU Campuses

--- a/storymap.ipynb
+++ b/storymap.ipynb
@@ -3294,7 +3294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3304,7 +3304,8 @@
     "# These parameters are: fillColor, weight, opacity, color, and fillOpacity\n",
     "chapter_df.loc[4, \"GeoJSON Feature Properties\"] = \"fillColor:red;color:black\"\n",
     "\n",
-    "# save the Chapters.csv and look at the index.html file\n"
+    "# save the Chapters.csv and look at the index.html file\n",
+    "chapter_df.to_csv('./csv/Chapters.csv')"
    ]
   },
   {
